# srt-translator

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  run_translation.ps1  run_translation.sh
.claude/: per-user-isolation-plan.md  plan.md  settings.local.json
backend/: config.py  dependencies.py  logging_config.py  main.py  requirements.txt
backend/core/: claude_client.py  client_factory.py  credits.py  openai_client.py  placeholders.py  translate.py  word_removal.py
backend/middleware/: __init__.py  rate_limit.py  security_headers.py  session.py
backend/routers/: files.py  health.py  suggestion_packages.py  translation.py
backend/schemas/: files.py  translation.py
backend/services/: file_service.py  translation_service.py
backend/suggestion-packages/: action-john-wick.json  anime-jujutsu-kaisen.json  game-of-thrones.json  sci-fi-the-expanse.json
examples/: do_not_translate.txt  remove_words.txt  sample.srt  test_removal.srt
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  configApi.ts  filesApi.ts  suggestionPackagesApi.ts  translationApi.ts
frontend/src/components/: Button.tsx  FileDropZone.tsx  InputField.tsx  (+11 more)
src/srt_chatgpt_translator/: __init__.py  cli.py  credits.py  openai_client.py  placeholders.py  translate.py  word_removal.py
tests/: conftest.py  test_compose_preserves_indices.py  test_enhanced_protection.py  test_glossary_skip.py  test_integration.py  test_placeholders.py  test_sample.srt
(+25 files in other folders)
