[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srt-chatgpt-translator"
version = "1.0.0"
description = "A Python CLI tool to translate SubRip (.srt) subtitle files using OpenAI's API while preserving exact structure"
authors = [
    {name = "Ntamas", email = "ntamas@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "openai>=1.0.0",
    "srt>=3.5.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
srt-translate = "srt_chatgpt_translator.cli:main"

[project.urls]
Homepage = "https://github.com/ntamas/srt-chatgpt-translator"
Repository = "https://github.com/ntamas/srt-chatgpt-translator"
Issues = "https://github.com/ntamas/srt-chatgpt-translator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"